css/app.css
/* ... */
.short-delay {
  transition-delay: 300ms !important; }

.long-delay {
  transition-delay: 700ms !important; }

.shake {
  animation-name: shake-7; }

@keyframes shake-7 {
  0%, 10%, 20%, 30%, 40%, 50%, 60%, 70%, 80%, 90% {
    transform: translateX(7%); }
  5%, 15%, 25%, 35%, 45%, 55%, 65%, 75%, 85%, 95% {
    transform: translateX(-7%); } }

.spin-cw {
  animation-name: spin-cw-1turn; }

@keyframes spin-cw-1turn {
  0% {
    transform: rotate(-1turn); }
  100% {
    transform: rotate(0); } }

.spin-ccw {
  animation-name: spin-cw-1turn; }

@keyframes spin-cw-1turn {
  0% {
    transform: rotate(0); }
  100% {
    transform: rotate(1turn); } }

.wiggle {
  animation-name: wiggle-7deg; }

@keyframes wiggle-7deg {
  40%, 50%, 60% {
    transform: rotate(7deg); }
  35%, 45%, 55%, 65% {
    transform: rotate(-7deg); }
  0%, 30%, 70%, 100% {
    transform: rotate(0); } }

.shake,
.spin-cw,
.spin-ccw,
.wiggle {
  animation-duration: 500ms; }

.infinite {
  animation-iteration-count: infinite; }

.slow {
  animation-duration: 750ms !important; }

.fast {
  animation-duration: 250ms !important; }

.linear {
  animation-timing-function: linear !important; }

.ease {
  animation-timing-function: ease !important; }

.ease-in {
  animation-timing-function: ease-in !important; }

.ease-out {
  animation-timing-function: ease-out !important; }

.ease-in-out {
  animation-timing-function: ease-in-out !important; }

.bounce-in {
  animation-timing-function: cubic-bezier(0.485, 0.155, 0.24, 1.245) !important; }

.bounce-out {
  animation-timing-function: cubic-bezier(0.485, 0.155, 0.515, 0.845) !important; }

.bounce-in-out {
  animation-timing-function: cubic-bezier(0.76, -0.245, 0.24, 1.245) !important; }

.short-delay {
  animation-delay: 300ms !important; }

.long-delay {
  animation-delay: 700ms !important; }

::selection {
  background-color: #4490fa;
  color: white; }

p {
  font-size: 1.1em;
  color: #4e566a; }
  p.small {
    font-size: 80%; }

h1 {
  font-family: "Nunito", sans-serif;
  font-weight: 700; }

h1, h2 {
  text-transform: uppercase; }

h2 {
  color: #2567FB;
  margin-bottom: 2.5em;
  font-family: "Nunito", sans-serif;
  font-weight: 800; }

h3 {
  color: #4e566a;
  font-family: "Nunito", sans-serif; }

button.button, a.button, li.button {
  font-family: "Nunito", sans-serif;
  text-transform: uppercase;
  font-weight: 800;
  transition: all ease .15s;
  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08); }
  button.button i, a.button i, li.button i {
    margin-right: 0.3em;
    font-size: 120%;
    transform: rotate(-90deg);
    transition: all ease .15s;
    margin-top: -2px; }
  button.button:hover, a.button:hover, li.button:hover {
    -webkit-transform: translateY(-2px);
    -moz-transform: translateY(-2px);
    -ms-transform: translateY(-2px);
    -o-transform: translateY(-2px);
    transform: translateY(-2px);
    box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08); }
    button.button:hover i, a.button:hover i, li.button:hover i {
      transform: rotate(0deg); }
  @media screen and (max-width: 39.9375em) {
    button.button, a.button, li.button {
      font-size: 1.2em; } }

@media screen and (max-width: 39.9375em) {
  input {
    font-size: 1.4rem; } }

.tabs-title.button:not(.is-active) {
  background-color: #b5c1dd; }

.tabs-title > a:hover {
  background: inherit;
  color: inherit; }

.tabs-title.button.is-active {
  box-shadow: 1px 1.2px 20px 3px rgba(37, 103, 251, 0.4), 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08); }

@-webkit-keyframes rotation {
  from {
    -webkit-transform: rotate(0deg); }
  to {
    -webkit-transform: rotate(360deg); } }

.top-bar {
  width: 100%;
  transition: all .2s; }
  .top-bar.sticky.is-stuck {
    box-shadow: 0 1px 10px 0 rgba(78, 86, 106, 0.1); }
  .top-bar.sticky.is-anchored {
    background-color: transparent; }
  .top-bar.sticky.is-anchored ul {
    background-color: transparent; }
    @media screen and (max-width: 39.9375em) {
      .top-bar.sticky.is-anchored ul {
        background-color: white;
        border-radius: 0.5em; }
        .top-bar.sticky.is-anchored ul li a {
          color: #4e566a; } }
    .top-bar.sticky.is-anchored ul a {
      color: white; }
  .top-bar ul {
    background-color: transparent; }
    .top-bar ul li {
      padding-left: 1em;
      padding-right: 1em; }
      .top-bar ul li a {
        color: #4e566a;
        font-family: "Nunito", sans-serif;
        font-weight: 600;
        font-size: 1.2em; }
        .top-bar ul li a:hover {
          color: #2567FB; }
        .top-bar ul li a.language-switcher img {
          height: 1em;
          margin-top: -2px;
          border-radius: 3px; }
      .top-bar ul li:last-child {
        padding-right: 0; }
      @media screen and (max-width: 39.9375em) {
        .top-bar ul li {
          display: block;
          text-align: right;
          font-size: 140%;
          padding: .4em 0; }
          .top-bar ul li:not(:first-child) {
            border-top: 1px solid #b5c1dd; } }
  .top-bar.sticky.is-anchored button.menu-icon:after {
    background-color: white;
    box-shadow: 0 7px 0 white, 0 14px 0 white; }
  .top-bar.sticky.is-anchored .top-bar-title svg {
    fill: white; }
  .top-bar .top-bar-title svg {
    fill: #4490fa; }
  .top-bar button.menu-icon:after {
    top: 8px;
    height: 3px;
    background-color: #4e566a;
    box-shadow: 0 7px 0 #4e566a, 0 14px 0 #4e566a; }

section#hello {
  background-image: -moz-linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
  background-image: -webkit-linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
  background-image: -ms-linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
  background-image: linear-gradient(110deg, #00d2ff 0%, #4490fa 58%, #2365fb 100%);
  height: 700px;
  padding-top: 9em;
  margin-bottom: 3em;
  margin-top: -3.58em; }
/* ... */

